--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Document</title>
   </head>
-  <body>
-    <h1>Adam Whisenhunt</h1>
+  <body style="background-color: black;">
+    <h1 style="margin: 3rem; color: yellow;">Adam Whisenhunt</h1>
     <p>Welcome, TO MY WEBSITE!</p>
     <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
   </body>
